Update the form navigation

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -121,6 +121,7 @@
   "AdditionalInformation": "Additional",
   "GenerateDocument": "Generate Report",
   "GenerateReport": "Generate Report",
+  "ViewReports": "View Reports",
 
   "IdNumber": "ID Number",
   "IdInformation": "ID Information",
