--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -124,6 +124,7 @@
   "AdditionalInformation": "额外信息",
   "GenerateDocument": "生成文档",
   "GenerateReport": "生成报告",
+  "ViewReports": "查看表单",
 
   "IdNumber": "证件号码",
   "IdInformation": "证件信息",
