--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -104,12 +104,16 @@
 
   "ImmigrationType": "Immigration Type",
   "ImmigrationReason": "Immigration Reason",
+  "ImmigrationSubtype": "Immigration Subtype",
   "Tips": "Tips",
 
   "Asylum": "Asylum",
+  "NewCase": "New Case",
+  "CreateNewCaseForCustomer": "Create a new case and account for customer",
   "CaseNumber": "Case Number",
   "DownloadFile": "DownloadFile",
   "Draft": "Draft",
+  "Send": "Send",
   "CreatedAt": "Created At",
   "LatestUpdate": "Latest Update",
   "ErrorFetchingCaseSummary": "Error fetching case summary",
@@ -179,6 +183,7 @@
   "SpousePartnerApplication": "Spouse/Partner Application",
   "Male": "Male",
   "Female": "Female",
+  "ApplyWithMe": "Applying with me",
   "MaritalStatus": "Marital Status",
   "Single": "Single",
   "Married": "Married",
