--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -112,15 +112,34 @@
   "Tips": "提示",
 
   "Asylum": "庇护",
+  "AFFIRMATIVE": "主动庇护",
+  "DEFENSIVE": "防御庇护",
   "NewCase": "新建案件",
   "CreateNewCaseForCustomer": "为客户新建账户与案件",
   "CaseNumber": "案件编号",
   "DownloadFile": "下载文件",
-  "Draft": "草稿",
   "Send": "邮箱发送",
   "CreatedAt": "创建时间",
   "LatestUpdate": "最新操作时间",
   "ErrorFetchingCaseSummary": "获取案例摘要时出错",
+  "Draft": "草稿",
+  "Reviewing": "审核中",
+  "Submitted": "已提交",
+
+  "CaseProgressTitle": "案件进展",
+  "FILLING_APPLICATION": "信息完善",
+  "REVIEW_AND_SIGN": "审查签署",
+  "SUBMIT_APPLICATION": "递交申请",
+  "FINGERPRINT_INTERVIEW": "指纹面谈",
+  "FINAL_RESULT": "出局结果",
+  "FILLING_DETAILS": "填写资料",
+  "LAWYER_REVIEW": "律师审核",
+  "CLIENT_SIGNATURE": "客户签字",
+  "NOTICE_RECEIPT": "收据上传",
+  "FINGERPRINT_COLLECTION": "指纹收集",
+  "INTERVIEW": "面试",
+  "FINAL_REVIEW": "最终审核",
+  "RESULT": "结果",
 
   "PersonalInformation": "个人信息",
   "BasicInformation": "基本信息",
