--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,4 +1,14 @@
 {
+  "View": "View",
+  "Download": "Download",
+  "Send for Signature": "Send for Signature",
+  "File Name": "File Name",
+  "File Type": "File Type",
+  "Created At": "Created At",
+  "Updated At": "Updated At",
+  "Action": "Action",
+  "Generate Documents": "Generate Documents",
+
   "Home": "Home",
   "AboutUs": "About us",
   "AboutQuickimmi": "About Quickimmi",
@@ -160,7 +170,7 @@
   "AdditionalInformation": "Additional",
   "GenerateDocument": "Generate Report",
   "GenerateReport": "Generate Report",
-  "ViewReports": "View Reports",
+  "ViewDocuments": "View Documents",
 
   "IdNumber": "ID Number",
   "IdInformation": "ID Information",
