--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -70,7 +70,7 @@
   },
   "ViewDetails": "View Details",
   "ApplicationType": "Application Type",
-  "LastUpdated": "Last Updated",
+  "LastUpdatedAt": "Last Updated At",
   "MasterApplicant": "Master Applicant",
   "SelectCaseType": "Select Case Type",
   "EnterCaseDetails": "Enter Case Details",
