Add delete and download api for case document page

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -8,6 +8,8 @@
   "Created At": "创建时间",
   "Updated At": "更新时间",
   "Action": "操作",
+  "Upload": "上传",
+  "Return": "返回",
   "Generate Documents": "生成文件",
   "UploadDocument": "上传文件",
   "CaseDocument": "附属文件",  
@@ -33,8 +35,8 @@
   "ReturnTocCaseSummaryPage": "查看案件进展",
   "LandingPage": {
     "BrandText": "AI助力，快速移民，轻松实现美国梦",
-    "LAWYER": "律师",
-    "APPLICANT": "申请人",
+    "Lawyer": "律师",
+    "Applicant": "申请人",
     "StableCustomers": "稳定的客户来源",
     "FastCheckout": "快速结账期，每周结算",
     "CheapServiceFee": "低廉的抽成费用",
