--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -8,6 +8,8 @@
   "Created At": "Created At",
   "Updated At": "Updated At",
   "Action": "Action",
+  "Upload": "Upload",
+  "Return": "Return",
   "Generate Documents": "Generate Documents",
   "UploadDocument": "Upload Document",
   "CaseDocument": "Case Document",  
@@ -33,8 +35,8 @@
   "ReturnTocCaseSummaryPage": "Return to Case Summary",
   "LandingPage": {
     "BrandText": "Fast-Track Your American Dream with AI",
-    "LAWYER": "Lawyer",
-    "APPLICANT": "Applicant",
+    "Lawyer": "Lawyer",
+    "Applicant": "Applicant",
     "StableCustomers": "Stable source of customers",
     "FastCheckout": "Fast billing cycle, weekly settlement",
     "CheapServiceFee": "Low commission fees",
