Update case progress card.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -158,6 +158,28 @@
   "INTERVIEW": "Interview",
   "FINAL_REVIEW": "Final Review",
   "RESULT": "Result",
+  "fillingDetailsMessage": "Filling in the case details you created. Please complete the filling or notify the client to complete it.",
+  "fillButtonText": "Fill",
+  "lawyerReviewMessage": "Case information has been filled in. Please review and generate the application documents as soon as possible.",
+  "reviewButtonText": "Review",
+  "clientSignatureMessage": "Please download the application documents and notify the client to sign.",
+  "downloadSignatureDocsButtonText": "Download documents to be signed",
+  "uploadSignedDocsButtonText": "Upload signed documents",
+  "submitApplicationMessage": "The client has completed the signing. Please prepare the application materials for submission as soon as possible.",
+  "registerTrackingNumberButtonText": "Register tracking number",
+  "noticeReceiptMessage": "Waiting for the immigration office to send the receipt.",
+  "registerReceiptButtonText": "Register receipt",
+  "waitingFingerprintCollectionMessage": "Waiting for the immigration court to notify the biometric collection time.",
+  "registerFingerprintTimeLocationButtonText": "Register fingerprint collection time and location",
+  "fingerprintCollectionMessage": "Time: {time}, Location: {location}, Note: {note}",
+  "viewReceiptButtonText": "View receipt",
+  "changeTimeLocationButtonText": "Change time and location",
+  "waitingInterviewMessage": "Waiting for the immigration court to notify the interview time.",
+  "registerInterviewTimeLocationButtonText": "Register interview time and location",
+  "interviewMessage": "Time: {time}, Location: {location}, Note: {note}",
+  "finalReviewMessage": "Waiting for the immigration court to complete the final review.",
+  "resultMessage": "The client's application has been successfully approved, and the case is closed.",
+  "cannotUpdateThisStepTooltip": "You can only update the step which is in progress.",
 
   "PersonalInformation": "Personal",
   "BasicInformation": "Basic",
