--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2,6 +2,8 @@
   "View": "View",
   "Download": "Download",
   "Delete": "Delete",
+  "DeleteConfirmMessage": "Are you sure you want to delete this document?",
+  "DeleteWarningMessage": "This action is permanent and cannot be undone.",
   "Send for Signature": "Send for Signature",
   "File Name": "File Name",
   "File Type": "File Type",
@@ -27,7 +29,6 @@
   "PrivacyPolicy": "Privacy Policy",
   "ImmigrationWebsite": "Immigration website",
   "Compare": "Compare",
-  "Delete": "Delete",
   "Login": "Log in",
   "SignUp": "Sign up",
   "ForgotPassword": "Forgot password",
