--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2,7 +2,7 @@
   "View": "View",
   "Download": "Download",
   "Delete": "Delete",
-  "DeleteConfirmMessage": "Are you sure you want to delete this document?",
+  "DeleteConfirmMessage": "Are you sure you want to delete this file?",
   "DeleteWarningMessage": "This action is permanent and cannot be undone.",
   "Send for Signature": "Send for Signature",
   "File Name": "File Name",
