--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -187,6 +187,7 @@
   "resultMessage": "客户申请已成功获批，案件结束",
   "cannotUpdateThisStepTooltip": "您只能更新当前步骤，其他完成步骤或者还未开始步骤不能更新。",
   "stepCompletedTooltip": "当前步骤已经完成，不能再更新。",
+  "Please provide complete and accurate application information": "请提供完整准确的申请信息",
 
   "PersonalInformation": "个人信息",
   "BasicInformation": "基本信息",
