Implement the percentage view in the progress card.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -164,7 +164,7 @@
   "INTERVIEW": "Interview",
   "FINAL_REVIEW": "Final Review",
   "RESULT": "Result",
-  "fillingDetailsMessage": "Filling in the case details you created. Please complete the filling or notify the client to complete it.",
+  "fillingDetailsMessage": "Filling in the case details you created. Please complete the filling or notify the client to complete it",
   "fillButtonText": "Fill",
   "lawyerReviewMessage": "Case information has been filled in. Please review and generate the application documents as soon as possible.",
   "reviewButtonText": "Review",
