--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -164,7 +164,7 @@
   "INTERVIEW": "面试",
   "FINAL_REVIEW": "最终审核",
   "RESULT": "结果",
-  "fillingDetailsMessage": "正在填写您创建的案件申请详情，请您完成填写或者通知客户完成填写。",
+  "fillingDetailsMessage": "正在填写您创建的案件申请详情，请您完成填写或者通知客户完成填写",
   "fillButtonText": "填写",
   "lawyerReviewMessage": "案件信息填写完毕，请尽快审核并生成申请文件。",
   "reviewButtonText": "审核",
