--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -13,6 +13,7 @@
   "Upload": "上传",
   "Return": "返回",
   "Search": "筛选",
+  "Cancel": "取消",
   "Generate Documents": "生成文件",
   "UploadDocument": "上传文件",
   "CaseDocument": "附属文件",
@@ -116,7 +117,9 @@
   "Confirm": "确认",
   "IdentificationCard": "身份证",
   "TravelDocument": "旅行证件",
+  "DocumentType": "证件类型",
   "SelectDocumentType": "选择证件类型",
+  
   "Dashboard": {
     "Dashboard": "仪表盘",
     "ReturnToDashboard": "返回仪表盘",
@@ -148,6 +151,7 @@
   "Submitted": "已提交",
   "InputClientEmail": "输入客户邮箱",
   "InviteClientViaEmail": "通过邮件发送注册邀请给客户",
+  "EnterClientEmail": "输入客户的邮箱地址",
   "InputFileNameToSearch": "输入文件名称搜索",
 
   "CaseProgressTitle": "案件进展",
