--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -13,6 +13,7 @@
   "Upload": "Upload",
   "Return": "Return",
   "Search": "Search",
+  "Cancel": "Cancel",
   "Generate Documents": "Generate Documents",
   "UploadDocument": "Upload Document",
   "CaseDocument": "Case Document",
@@ -148,6 +149,7 @@
   "Submitted": "Submitted",
   "InputClientEmail": "Input client email",
   "InviteClientViaEmail": "Sent sign up invite to customer via email",
+  "EnterClientEmail": "Enter client email address",
   "InputFileNameToSearch": "Input file name to search",
 
   "CaseProgressTitle": "Progress",
@@ -217,6 +219,7 @@
 
   "IdentificationCard": "Identification Card",
   "TravelDocument": "Travel Document",
+  "DocumentType": "Document Type",
   "SelectDocumentType": "Select a document type",
 
   "FirstName": "First Name",
