--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -166,7 +166,7 @@
   "INTERVIEW": "Interview",
   "FINAL_REVIEW": "Final Review",
   "RESULT": "Result",
-  "fillingDetailsMessage": "Filling in the case details you created. Please complete the filling or notify the client to complete it",
+  "fillingDetailsMessage": "Please fill in the case details",
   "fillButtonText": "Fill",
   "lawyerReviewMessage": "Case information has been filled in. Please review and generate the application documents as soon as possible.",
   "reviewButtonText": "Review",
@@ -190,6 +190,7 @@
   "cannotUpdateThisStepTooltip": "You can only update the step which is in progress.",
   "stepCompletedTooltip": "This step is completed and cannot be updated.",
   "Please provide complete and accurate application information": "Please provide complete and accurate application information",
+  "Go Complete": "Go Complete",
 
   "PersonalInformation": "Personal",
   "BasicInformation": "Basic",
