Move the generateDocument button to the view documents form content

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -417,6 +417,7 @@
   "Save": "保存",
   "Yes": "是",
   "No": "否",
+  "Documents already generated": "文件已生产",
 
   "Select a country": "选择一个国家",
   "Select a city": "选择一个城市",
