--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -420,6 +420,7 @@
   "Save": "Save",
   "Yes": "Yes",
   "No": "No",
+  "Documents already generated": "Documents already generated",
 
   "Select a country": "Select a country",
   "Select a city": "Select a city",
