--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -418,6 +418,7 @@
   "Yes": "是",
   "No": "否",
   "Documents already generated": "文件已生产",
+  "Replace": "替换",
 
   "Select a country": "选择一个国家",
   "Select a city": "选择一个城市",
