--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -421,6 +421,7 @@
   "Yes": "Yes",
   "No": "No",
   "Documents already generated": "Documents already generated",
+  "Replace": "Replace",
 
   "Select a country": "Select a country",
   "Select a city": "Select a city",
