Add modals for upading case progress.

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -111,6 +111,7 @@
   "VerificationCode": "验证码",
   "PhoneNumber": "电话号码",
   "InputConfirmationCode": "请输入发送到以下地址的验证码：",
+  "UploadPassport": "护照上传",
   "UploadPassportOrOtherID": "上传护照或者其他身份证明",
   "UploadPassportDescription1": "上传您的业务代表的护照正面图片。这些图片将用于身份验证。",
   "UploadPassportDescription2": "确保您的图片包括身份证正面的所有信息，包括任何签名。图片也需要清晰，没有任何扭曲或模糊的部分。",
@@ -180,6 +181,7 @@
   "downloadSignatureDocsButtonText": "下载需要签署的文件",
   "uploadSignedDocsButtonText": "上传已签署文件",
   "submitApplicationMessage": "客户完成签署，请尽快准备申请资料以递交。",
+  "downloadSignedDocsButtonText": "下载已签署文件",
   "registerTrackingNumberButtonText": "登记递交快递编号",
   "noticeReceiptMessage": "等待移民局发送收据。",
   "registerReceiptButtonText": "登记收据",
@@ -197,6 +199,8 @@
   "stepCompletedTooltip": "当前步骤已经完成，不能再更新。",
   "Please provide complete and accurate application information": "请提供完整准确的申请信息",
   "Go Complete": "去填表",
+  "UploadSignedDocument": "上传已签署文件",
+  "Click or drag file to this area to upload": "点击或拖拽文件到此区域上传",
 
   "PersonalInformation": "个人信息",
   "BasicInformation": "基本信息",
