Update the progress modal.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -199,12 +199,24 @@
   "Go Complete": "Go Complete",
   "UploadSignedDocument": "Upload Signed Document",
   "Click or drag file to this area to upload": "Click or drag file to this area to upload",
-  "UploadTrackingNumber": "Upload Tracking Number",
+  "UploadTrackingNumber": "Application Tracking Number",
   "UploadTrackingNumberDesc": "Upload tracking number to share with the client.",
   "Select carrier": "Select carrier",
   "Tracking Number":"Tracking Number",
   "Package Photo (if any)": "Package Photo (if any)",
-
+  "RegisterApplicationReceipt": "Application Receipt",
+  "RegisterApplicationReceiptDesc": "Upload application receipt to update the process.",
+  "Application Receipt": "Application Receipt",
+  "UploadBiometricsCollectionAppointmentInfo": "Biometrics Collection Appointment Information",
+  "UploadBiometricsCollectionAppointmentInfoDesc": "Update Biometrics Collection Appointment Information",
+  "Time": "Time",
+  "Note": "Note",
+  "UploadInterviewAppointmentInfo": "Interview Appointment Information",
+  "UploadInterviewAppointmentInfoDesc": "Update interview appointment information:",
+  "ApplicationResult": "Application Result",
+  "UploadApplicationResultDesc": "Upload application result",
+  "Select result": "Select result",
+  "Upload Application Result Notice": "Upload Application Result Notice",
   "PersonalInformation": "Personal",
   "BasicInformation": "Basic",
   "ContactInformation": "Contact",
