--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -206,6 +206,19 @@
   "Select carrier": "承运公司",
   "Tracking Number":"快递单号",
   "Package Photo (if any)": "包裹照片（若有）",
+  "RegisterApplicationReceipt": "上传申请收据",
+  "RegisterApplicationReceiptDesc": "上传申请收据来更新进度。",
+  "Application Receipt": "申请收据",
+  "UploadBiometricsCollectionAppointmentInfo": "指纹采集信息",
+  "UploadBiometricsCollectionAppointmentInfoDesc": "更新指纹采集信息",
+  "Time": "时间",
+  "Note": "温馨提示",
+  "UploadInterviewAppointmentInfo": "面试信息",
+  "UploadInterviewAppointmentInfoDesc": "更新面试时间地点",
+  "ApplicationResult": "申请结果更新",
+  "UploadApplicationResultDesc": "上传申请结果",
+  "Select result": "选择结果",
+  "Upload Application Result Notice": "上传申请结果文件",
   "PersonalInformation": "个人信息",
   "BasicInformation": "基本信息",
   "ContactInformation": "联系信息",
