Refactor the case document page and add search functionality in the url.

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -157,7 +157,7 @@
   "InputClientEmail": "输入客户邮箱",
   "InviteClientViaEmail": "通过邮件发送注册邀请给客户",
   "EnterClientEmail": "输入客户的邮箱地址",
-  "InputFileNameToSearch": "输入文件名称搜索",
+  "InputFileNameToSearch": "输入文件名搜索",
 
   "CaseProgressTitle": "案件进展",
   "FILLING_APPLICATION": "信息完善",
@@ -201,7 +201,6 @@
   "Go Complete": "去填表",
   "UploadSignedDocument": "上传已签署文件",
   "Click or drag file to this area to upload": "点击或拖拽文件到此区域上传",
-  "": "",
   "UploadTrackingNumber": "登记递交",
   "UploadTrackingNumberDesc": "登记邮寄信息以更新申请进度",
   "Select carrier": "承运公司",
