--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -155,7 +155,7 @@
   "InputClientEmail": "Input client email",
   "InviteClientViaEmail": "Sent sign up invite to customer via email",
   "EnterClientEmail": "Enter client email address",
-  "InputFileNameToSearch": "Input file name to search",
+  "InputFileNameToSearch": "Enter file name to search",
 
   "CaseProgressTitle": "Progress",
   "FILLING_APPLICATION": "Collect Information",
