--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -2,8 +2,8 @@
   "View": "查看",
   "Download": "下载",
   "Delete": "删除",
-  "DeleteConfirmMessage": "你确定要删除以下文件吗？",
-  "DeleteWarningMessage": "这个操作无法撤回",
+  "DeleteConfirmMessage": "你确定要删除 ",
+  "DeleteConfirmSubMessage": "此操作无法撤销，与此相关的所有数据将被删除。",
   "Send for Signature": "发送签字",
   "File Name": "文件名称",
   "File Type": "文件类型",
