--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2,8 +2,8 @@
   "View": "View",
   "Download": "Download",
   "Delete": "Delete",
-  "DeleteConfirmMessage": "Are you sure you want to delete this file?",
-  "DeleteWarningMessage": "This action is permanent and cannot be undone.",
+  "DeleteConfirmMessage": "Are you sure you want to delete ",
+  "DeleteConfirmSubMessage": "This action cannot be undone, all data associated with it will be deleted.",
   "Send for Signature": "Send for Signature",
   "File Name": "File Name",
   "File Type": "File Type",
