Handle file upload in different case steps.

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -213,8 +213,10 @@
   "UploadBiometricsCollectionAppointmentInfoDesc": "更新指纹采集信息",
   "Time": "时间",
   "Note": "温馨提示",
+  "Upload Biometrics Receipt": "上传指纹采集凭证",
   "UploadInterviewAppointmentInfo": "面试信息",
   "UploadInterviewAppointmentInfoDesc": "更新面试时间地点",
+  "Upload Interview Receipt": "上传面试凭证",
   "ApplicationResult": "申请结果更新",
   "UploadApplicationResultDesc": "上传申请结果",
   "Select result": "选择结果",
