--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -211,8 +211,10 @@
   "UploadBiometricsCollectionAppointmentInfoDesc": "Update Biometrics Collection Appointment Information",
   "Time": "Time",
   "Note": "Note",
+  "Upload Biometrics Receipt": "Upload Biometrics Receipt",
   "UploadInterviewAppointmentInfo": "Interview Appointment Information",
   "UploadInterviewAppointmentInfoDesc": "Update interview appointment information:",
+  "Upload Interview Receipt": "Upload Interview Receipt",
   "ApplicationResult": "Application Result",
   "UploadApplicationResultDesc": "Upload application result",
   "Select result": "Select result",
