Fix religon None selection

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -463,6 +463,7 @@
     "White"
   ],
   "ReligionOptions": [
+    "No religion",
     "African Traditional & Diasporic",
     "Agnostic",
     "Atheist",
