Change the question for education and employment

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -344,7 +344,7 @@
 
   "School": "学校",
   "AddASchool": "添加一所学校",
-  "MostRecentSchool": "列出您最近就读的学校",
+  "MostRecentSchool": "请提供您的全部教育信息，从最近就读的学校开始。",
   "SchoolName": "学校名称",
   "SchoolType": "学校类型",
   "Location": "地点",
