--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -347,7 +347,7 @@
 
   "School": "School",
   "AddASchool": "Add a school",
-  "MostRecentSchool": "List the most recent school that you attended",
+  "MostRecentSchool": "Please provide information about all the education you have, starting with the most recent one.",
   "SchoolName": "Name of School",
   "SchoolType": "Type of School",
   "Location": "Location",
