Small content fix

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -354,7 +354,7 @@
 
   "Employment": "就业",
   "AddEmployment": "添加就业",
-  "MostRecentEmployment": "提供过去5年的就业情况。首先列出您目前的就业情况。",
+  "MostRecentEmployment": "请提供过去5年的就业情况。首先列出您目前的就业情况。",
   "NameAndAddressOfEmployer": "雇主名称和地址",
   "Occupation": "您的职业",
   "StartDate": "开始日期",
