--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -357,7 +357,7 @@
 
   "Employment": "Employment",
   "AddEmployment": "Add employment",
-  "MostRecentEmployment": "Provide your employment during the past 5 years. List your present employment first.",
+  "MostRecentEmployment": "Please provide your employment during the past 5 years. List your present employment first.",
   "NameAndAddressOfEmployer": "Name and Address of Employer",
   "Occupation": "Your Occupation",
   "StartDate": "Start Date",
