Add A-number to question

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -369,7 +369,7 @@
   "Country": "国家",
   "AddressBeforeUS": "请列出您来到美国之前居住的最后一个地址。如果这不是您担心迫害的国家，请同时列出您担心迫害的国家的最后一个地址。",
 
-  "AlienRegistrationNumber": "外国人注册号码",
+  "AlienRegistrationNumber": "外国人注册号码(A-Number)",
   "UscisOnlineAccountNumber": "美国公民及移民服务局在线账户号码",
   "I94Number": "I-94 号码",
   "SSN": "社会安全号码",
