--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -372,7 +372,7 @@
   "Country": "Country",
   "AddressBeforeUS": "List your last address where you lived before coming to the United States. If this is not the country where you fear persecution, also list the last address in the country where you fear persecution.",
 
-  "AlienRegistrationNumber": "Alien Registration Number",
+  "AlienRegistrationNumber": "Alien Registration Number(A-Number)",
   "UscisOnlineAccountNumber": "USCIS Online Account Number",
   "I94Number": "I-94 Number",
   "SSN": "Social Security Number",
