--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -24,7 +24,7 @@
   "Use": "Use",
   "Rewrite": "Rewrite",
   "Discard": "Discard",
-  
+
   "Home": "Home",
   "AboutUs": "About us",
   "AboutQuickimmi": "About Quickimmi",
@@ -206,7 +206,7 @@
   "UploadTrackingNumber": "Application Tracking Number",
   "UploadTrackingNumberDesc": "Upload tracking number to share with the client.",
   "Select carrier": "Select carrier",
-  "Tracking Number":"Tracking Number",
+  "Tracking Number": "Tracking Number",
   "Package Photo (if any)": "Package Photo (if any)",
   "RegisterApplicationReceipt": "Application Receipt",
   "RegisterApplicationReceiptDesc": "Upload application receipt to update the process.",
@@ -417,6 +417,7 @@
   "ExplainAppliedOneYearAfterYourLastArrival": "If \"Yes,\" explain why you did not file within the first year after you arrived. You must be prepared to explain at your interview or hearing why you did not file your asylum application within the first year after you arrived. For guidance in answering this question, see Instructions, Part 1: Filing Instructions, Section V. \"Completing the Form,\" Part C.",
   "HaveCommittedCrime": " Have you or any member of your family included in the application ever committed any crime and/or been arrested, charged, convicted, or sentenced for any crimes in the United States (including for an immigration law violation)?",
   "ExplainHaveCommittedCrime": "If \"Yes,\" for each instance, specify in your response: what occurred and the circumstances, dates, length of sentence received, location, the duration of the detention or imprisonment, reason(s) for the detention or conviction, any formal charges that were lodged against you or your relatives included in your application, and the reason(s) for release. Attach documents referring to these incidents, if they are available, or an explanation of why documents are not available.",
+  "UploadSupportingDocuments": "Upload Supporting Documents",
 
   "Signature": "Signature",
   "PrintCompleteName": "Print your complete name",
