--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -24,7 +24,7 @@
   "Use": "Use",
   "Rewrite": "Rewrite",
   "Discard": "Discard",
-  
+
   "Home": "Home",
   "AboutUs": "About us",
   "AboutQuickimmi": "About Quickimmi",
@@ -206,7 +206,7 @@
   "UploadTrackingNumber": "Application Tracking Number",
   "UploadTrackingNumberDesc": "Upload tracking number to share with the client.",
   "Select carrier": "Select carrier",
-  "Tracking Number":"Tracking Number",
+  "Tracking Number": "Tracking Number",
   "Package Photo (if any)": "Package Photo (if any)",
   "RegisterApplicationReceipt": "Application Receipt",
   "RegisterApplicationReceiptDesc": "Upload application receipt to update the process.",
@@ -243,6 +243,8 @@
   "GenerateDocument": "Generate Report",
   "GenerateReport": "Generate Report",
   "ViewDocuments": "View Documents",
+  "PersonalStatement": "Personal Statement",
+  "PersonalStatementInOriginalLanguage": "Personal Statement in Original Language",
 
   "IdNumber": "ID Number",
   "IdInformation": "ID Information",
